--- a/app/src/main/res/layout/activity_user_temple_handle.xml
+++ b/app/src/main/res/layout/activity_user_temple_handle.xml
@@ -6,11 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TempleList">
+    tools:context=".UserTempleHandle"
+    android:background="@drawable/background">
+
 
     <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/recordsRv"
+
+        android:id="@+id/userTempleRecords"
         android:layout_width="410dp"
         android:layout_height="516dp"
         android:layout_alignParentStart="true"
@@ -18,16 +21,14 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="-55dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="2dp"
         android:clipToPadding="false"
         android:paddingBottom="80dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/userrow_record" />
-
-
 
 
 </RelativeLayout>
