--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,6 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
+    <item
+        android:id="@+id/logo"
+        android:icon="@drawable/logo"
+        android:title="@string/iconLogo"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menuProfile"
